Lab_15_Enable_Developer_Self-Service/network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: dev-team-alpha
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
